# MiniGpt2

./: .gitignore  Architecture.md  BasePath.py  CleanDatasets.py  MassPredict.py  Predict.py  README.md  Reset&Train.py  UpdateRag.py  pyproject.toml
Apps&Cloudflare/: App.py  LocalApp.py
DatasetManager/: GenerateDataset.py
MergeStages/: MergeStages1-2.py  MergeStages2-3.py  MergeStages3-4.py  MergeStagesB-1.py
Rag/Config/: Chunking.yaml  Embedding.yaml
Rag/Pipelines/: BuildIndex.py  IngestDocs.py  PackPrompt.py  PostCheck.py  Rerank.py  Retrieve.py  Router.py
Rag/Prompts/: CanonWrapper.txt  KnowledgeWrapper.txt  System.txt
TrainStages/: TrainCode.py  TrainStage2.py  TrainStage3.py  TrainStage4.py
config/: models.example.json
data/: eval_tasks.jsonl
llm_eval/: __init__.py  cli.py  clients.py  judges.py  metrics.py  report.py  runner.py  tasks.py
tests/: test_clients.py  test_judges.py  test_metrics_report.py  test_runner.py  test_scope.py  test_tasks.py
